--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,21 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,700,700i&display=swap" rel="stylesheet">
+
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -24,8 +30,27 @@
       <span>tweeter</span>
     </nav>
 
+<!-- Header -->
+  <header>
+    <div class = "avatar">
+        <img src="/images/profile-hex.png">
+    </div>
+    <br>
+    <div>
+        <h2>Your Name</h2>
+    </div>
+</header>
+
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="new-tweet">
+  <h2>Compose Tweet</h2>
+  <form action="/tweets" method = "POST">
+    <textarea name="text" placeholder="What are you humming about?"></textarea>
+  <div>  <input type="submit" value="Tweet"> </div>
+    <span class="counter">140</span>
+  </form>
+</section>
     </main>
 
   </body>
