Tweet Dynamically Created

--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/ae973c3081.js"></script>
+
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,700,700i&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,700,700i&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweetArticle.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script
+      type="text/javascript"
+      src="/scripts/composer-char-counter.js"
+    ></script>
   </head>
 
   <body>
-
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <container class="arrow">
+        <div><small>Write a new Tweet</small></div>
+        <i id="clickhere" class="fas fa-angle-double-down"></i>
+      </container>
     </nav>
 
-<!-- Header -->
-  <header>
-    <div class = "avatar">
-        <img src="/images/profile-hex.png">
-    </div>
-    <br>
-    <div>
-        <h2>Your Name</h2>
-    </div>
-</header>
+    <!-- Header -->
+    <header class="main">
+      <div class="avatar"><img src="/images/profile-hex.png" /></div>
+      <br />
+      <div><h2>Your Name</h2></div>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <section class="new-tweet">
-  <h2>Compose Tweet</h2>
-  <form action="/tweets" method = "POST">
-    <textarea name="text" placeholder="What are you humming about?"></textarea>
-  <div>  <input type="submit" value="Tweet"> </div>
-    <span class="counter">140</span>
-  </form>
-</section>
-    </main>
+      <div class="error"><span class="errorText"></span></div>
 
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form class="tweetForm" action="/tweets" method="POST">
+          <textarea
+            name="text"
+            placeholder="What are you humming about?"
+          ></textarea>
+          <div><input type="submit" value="Tweet" /></div>
+          <span class="counter">140</span>
+        </form>
+      </section>
+      <section class="tweets">
+        <article class="tweetArticle">
+          <header class="tweetHeader  ">
+            <h5><img src="https://i.imgur.com/73hZDYK.png" /> Newton</h5>
+            <h5 class="handle">@SirIsaac</h5>
+          </header>
+          <p class="tweet">
+            If i have seen further it is by standing on giants
+          </p>
+          <footer>
+            <p class="timestamp">10 days ago</p>
+            <p class="icons">Icons</p>
+          </footer>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
