Bug Fix, DOM Input was delayed

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <header class="main">
       <div class="avatar"><img src="/images/profile-hex.png" /></div>
       <br />
-      <div><h2>Your Name</h2></div>
+      <div><h2>Lauren Ipsum</h2></div>
     </header>
 
     <!-- Page-specific (main) content here -->
